--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-social": "^5.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
     "font-awesome": "^4.7.0",
