--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "start:prod": "ng build --prod && lite-server --baseDir dist/pwaSalud",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,7 +24,9 @@
     "@angular/material": "^7.0.3",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.13.5",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
